--- a/src/modules/hero.module/module.html
+++ b/src/modules/hero.module/module.html
@@ -3,6 +3,7 @@
     <div class="span5">
       <h1 class="hero__header-top">
         {% inline_text field="header_top" value="{{ module.header_top }}" %}
+        <span>Anxiety</span>
       </h1>
       <h1 class="hero__header-bottom">
         {% inline_text field="header_bottom" value="{{ module.header_bottom }}" %}
