--- a/src/modules/list.module/module.html
+++ b/src/modules/list.module/module.html
@@ -18,6 +18,9 @@
           <div class="list__item-title">
             {% inline_text field="list_items.first_item_text" value="{{ module.list_items.first_item_text }}" %}
           </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.first_item_description" value="{{ module.list_items.first_item_description }}" %}
+          </div>
       </div>
     </div>
     <div class="span2">
@@ -30,6 +33,9 @@
           </div>
           <div class="list__item-title">
             {% inline_text field="list_items.second_item_text" value="{{ module.list_items.second_item_text }}" %}
+          </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.second_item_description" value="{{ module.list_items.second_item_description }}" %}
           </div>
         </div>
     </div>
@@ -44,6 +50,9 @@
           <div class="list__item-title">
             {% inline_text field="list_items.third_item_text" value="{{ module.list_items.third_item_text }}" %}
           </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.third_item_description" value="{{ module.list_items.third_item_description }}" %}
+          </div>
       </div>
     </div>
     <div class="span2">
@@ -56,6 +65,9 @@
           </div>
           <div class="list__item-title">
             {% inline_text field="list_items.fourth_item_text" value="{{ module.list_items.fourth_item_text }}" %}
+          </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.fourth_item_description" value="{{ module.list_items.fourth_item_description }}" %}
           </div>
         </div>
     </div>
@@ -70,6 +82,9 @@
           <div class="list__item-title">
             {% inline_text field="list_items.fifth_item_text" value="{{ module.list_items.fifth_item_text }}" %}
           </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.fifth_item_description" value="{{ module.list_items.fifth_item_description }}" %}
+          </div>
         </div>
     </div>
     <div class="span2">
@@ -82,6 +97,9 @@
           </div>
           <div class="list__item-title">
             {% inline_text field="list_items.sixth_item_text" value="{{ module.list_items.sixth_item_text }}" %}
+          </div>
+          <div class="list__item-description">
+            {% inline_text field="list_items.sixth_item_description" value="{{ module.list_items.sixth_item_description }}" %}
           </div>
         </div>
     </div>
