--- a/src/modules/contact.module/module.html
+++ b/src/modules/contact.module/module.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section class="contact" id="contact-form">
   <div class="contact__image-container">
   {% if module.image_field.src %}
     {% set loadingAttr = module.image_field.loading != 'disabled' ? 'loading="{{ module.image_field.loading }}"' : '' %}
